# het_ifo_opd

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/notes/1.0_OPDEstimation/: Makefile  main_OPDEstimation.tex  make_figures.py  values.tex
docs/notes/1.1_RattlyTestMass/: Makefile  main_RattlyTestMass.tex  make_figures.py  table_day09.tex  values.tex
het_ifo_opd/: __init__.py  cli.py  config.py  estimators.py  io.py  physics.py  pipeline.py  plotting.py
notebooks/: fm1_day09_robust_pipeline.ipynb  fm1_opd_analysis.ipynb  fm1_spectra.ipynb  fm5_opd_analysis.ipynb  fm5_spectra.ipynb
scripts/: analyze_fm1.py
tests/: test_validation.py
